# mycelium

./: .ai.md  .gitignore  LICENSE  README.en.md  README.md  pyproject.toml  requirements.txt
benchmarks/: RESULTS_popular_tools.md  agentic_bench.py  korquad_bench.py  plugin_default_bench.py
docs/: DESIGN.md  DESIGN_GRAPHRAG.md  MCP_SETUP.md
sample_vault/: book_deep_work_summary.md  cli_design_principles.md  draft_private_idea.md  fermentation_kimchi.md  hybrid_search_notes.md  knowledge_graph_intro.md  kyoto_travel_notes.md  memory_safety_languages.md  minimalist_packing.md  note_taking_zettelkasten.md  perfect_steak_guide.md  quick_memo_idea.md  rust_ownership_basics.md  sous_vide_basics.md  wine_pairing_simple.md
src/mycelium/: __main__.py
src/mycelium/adapters/: embedding.py  graph_store.py  llm.py  vectorstore.py
src/mycelium/core/: artifacts.py  config.py  models.py
src/mycelium/eval/: evaluate.py  goldset.yaml
src/mycelium/interfaces/: cli.py  mcp_server.py
src/mycelium/pipeline/: agentic.py  distill.py  generation.py  ingestion.py  retrieval.py
src/mycelium/pipeline/graph/: build.py  community.py  enrich.py  exhaustive.py  summarize.py
