[build-system]
# setuptools 빌드 백엔드 — editable 설치(pip install -e .)로 myco 엔트리포인트 생성
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mycelium"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "langchain==1.3.9",
    "langchain-core==1.4.7",
    "langchain-text-splitters==1.1.2",
    "langchain-ollama==1.1.0",
    "langchain-chroma==1.1.0",
    "chromadb==1.5.9",
    "rank-bm25==0.2.2",
    "kiwipiepy==0.23.2",
    "langgraph==1.2.5",
    "mcp==1.27.2",
    "typer==0.25.1",
    "pyyaml==6.0.3",
    "networkx==3.6.1",
    "python-igraph==1.0.0",
    "leidenalg==0.12.0",
]

[project.scripts]
# myco 명령 = python -m mycelium 과 동일한 typer 앱 진입점
myco = "mycelium.interfaces.cli:app"

[tool.setuptools]
# 패키지는 src/ 레이아웃에 위치한다
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
# goldset.yaml 등 비-파이썬 리소스 포함
mycelium = ["eval/*.yaml"]
